--- a/appveyor-gn.yml
+++ b/appveyor-gn.yml
@@ -31,6 +31,8 @@ build_script:
   - cd src
   - gn gen out/Default "--args=import(\"//electron/build/args/%gn_args%.gn\")"
   - ninja -C out/Default electron:electron_app
+  - gn gen out/ffmpeg "--args=import(\"//electron/build/args/ffmpeg.gn\")"
+  - ninja -C out/ffmpeg third_party/ffmpeg
 test_script:
   - ninja -C out/Default electron/build/node:headers
   - ps: $env:npm_config_nodedir="$pwd/out/Default/gen/node_headers"
@@ -39,7 +41,7 @@ test_script:
   - npm install
   - ps: Pop-Location
   - ./out/Default/electron.exe electron/spec --ci
-  # TODO(nornagon): verify-ffmpeg step
+  - python electron\verify-ffmpeg.py -c Default --source_root "%pwd%\src" --ffmpeg_path "%pwd%\src\out\ffmpeg"
 artifacts:
 - path: test-results.xml
   name: test-results.xml
