--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,7 +241,7 @@ gn-build-steps: &gn-build-steps
             (cd electron/spec && npm install)
             python electron/script/lib/dbus_mock.py ./out/Default/electron electron/spec --ci --enable-logging
             if [ "$BUILD_FFMPEG" == "true" ]; then
-              python electron/verify-ffmpeg.py -c Default --source_root "$PWD/src" --ffmpeg_path "$PWD/src/out/ffmpeg"
+              python src/electron/verify-ffmpeg.py -c Default --source_root "$PWD/src" --ffmpeg_path "$PWD/src/out/ffmpeg"
             fi
           fi
     - store_test_results:
